fix form alignment on mobile

--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -65,79 +65,7 @@ h3 {
   }
 }
 
-/* form */
-.comment-form {
-  background: #fff;
-  display: flex;
-  flex-direction: column;
-  padding: 0 1rem;
-}
-
-.comment-form .stack > * + * {
-  display: block;
-}
-
-.comment-form {
-  input[type=text], textarea {
-    border: solid 1px;
-    width: 90%;
-    line-height: 3rem;
-    border-radius: .3rem;
-    margin-top: .5rem;
-  }
-  textarea {
-    height: 9rem;
-  }
-}
-
-.comment-form {
-
-  .radio-container {
-    margin-top: 0;
-    display: flex;
-    align-items: center;
-  }
-  input {
-    margin-right: 1rem;
-  }
-  .radios-list {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 90%;
-  }
-  input[type="radio"] {
-    width: 1.3rem;
-    height: 1.3rem;
-  }
-  .small-marg {
-    margin-top: 0.5rem;
-  }
-
-  .form-error {
-    display: none;
-    font-size: .875rem;
-  
-    margin-top: .5rem;
-    background-color: #FCE9E8;
-    color: #93182B;
-    padding: .3rem;
-    text-indent: 2rem;
-    background-image: url(/img/error.svg);
-    background-repeat: no-repeat;
-    background-position: 0.5rem 0.5rem;
-  }
-  
-}
-
-.form-success {
-  background-color: #E5F1E7;
-  background-image: url(/img/checkmark.svg);
-  background-repeat: no-repeat;
-  background-position: 0.7rem 1rem;
-  padding: 0.5rem;
-  text-indent: 2rem;
-}
+@import './form';
 
 /* fixes some blurry background on map markers */
 .leaflet-container .leaflet-shadow-pane img, .leaflet-container .leaflet-marker-pane img {
@@ -164,17 +92,7 @@ h3 {
   }
 }
 
-.mb-0 {
-  margin-bottom: 0;
-}
-.mobile-only {
-  display: none;
-}
-@media (max-width: 900px) {
-  .mobile-only {
-    display: inline-block;
-  }
-}
+
 
 .other-ways .icon-left svg path {
   fill: #046B99;
@@ -195,11 +113,26 @@ h3 {
   }
 }
 
+/* utility classes */
 .m-l-2 {
   margin-left: 2rem;
 }
 .mini {
   font-size: .875rem;
+}
+.mb-0 {
+  margin-bottom: 0;
+}
+.mobile-only {
+  display: none;
+}
+@media (max-width: 900px) {
+  .mobile-only {
+    display: inline-block;
+  }
+  .comment-form {
+    margin-top: 1rem;
+  }
 }
 
 /* map alignment */
